--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   --font: "Rubik", sans-serif;
 
   --country-container-width: 69px;
-  --city-container-width: 100px;
+  --city-container-width: 160px;
   --city-font-size: 45px;
 }
 
@@ -39,22 +39,36 @@ body {
   display: block;
   position: absolute;
   content: "";
-  left: 0;
+  left: 1px;
   right: 0;
   top: 0;
   bottom: 0;
   border: 1px solid var(--clr-white);
   z-index: 10;
   background-color: transparent;
+}
+
+#container::after {
+  pointer-events: none;
+  display: block;
+  position: absolute;
+  content: "";
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1000;
+  background-color: transparent;
   animation: blankScreen 0.6s linear 15s forwards;
 }
 
 #overlay-start {
   background-color: var(--clr-white);
-  z-index: 1;
+  z-index: 100;
   position: absolute;
   width: 300px;
   height: 1200px;
+  transform: translate3d(0%, 0%, 1px);
   animation: sliderUpFirstPhase 0.25s linear 0.2s forwards,
     sliderUpSecondPhase 0.25s linear 1.75s forwards;
 }
@@ -73,7 +87,7 @@ body {
   width: 96px;
   padding: 19px;
   padding-bottom: 16px;
-  z-index: 1;
+  z-index: 100;
   top: 315px;
   left: -150px;
   position: absolute;
@@ -121,17 +135,20 @@ body {
 }
 
 #first-image {
+  transform: translate3d(0%, 0%, 1px);
   animation: zoomImage 4.3s linear 1.9s forwards;
 }
 
 #second-image {
+  transform: translate3d(0%, 0%, 1px);
   animation: slideSecondImage 0.3s cubic-bezier(0.25, 1, 0.5, 1) 5.8s forwards,
     zoomSecondImage 4.3s linear 6.1s forwards;
 }
 
 #third-image {
+  transform: translate3d(0%, 0%, 1px);
   animation: slideThirdImage 0.6s cubic-bezier(0.25, 1, 0.5, 1) 10.1s forwards,
-    zoomThirdImage 4.3s linear 10.7s forwards;
+    zoomThirdImage 4.6s linear 10.7s forwards;
 }
 
 #place-container {
@@ -139,7 +156,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   transform: translate(36px, 356px);
-  height: 61px;
+  height: auto;
 }
 
 #country-container {
@@ -159,7 +176,7 @@ body {
   font-size: 15px;
   font-weight: 500;
   margin-left: 16px;
-  transform: translateY(15px);
+  transform: translateY(20px);
   animation: showCountryName 0.2s ease 2.4s forwards,
     slideCountryUp 0.2s ease 5.2s forwards,
     showCountryName 0.2s ease 6.2s forwards,
@@ -295,12 +312,12 @@ body {
 .second-swiper {
   transform: translateX(-20px);
   animation: secondSwipe 0.3s cubic-bezier(0, 0.85, 0.75, 1) 5.85s forwards,
-    thirdSwipe 0.3s cubic-bezier(0, 0.85, 0.75, 1) 10.1s forwards;
+    thirdSwipe 0.3s cubic-bezier(0, 0.85, 0.75, 1) 10.3s forwards;
 }
 
 .third-swiper {
   transform: translateX(-10px);
-  animation: swipeBox 0.3s cubic-bezier(0, 0.85, 0.75, 1) 10.1s forwards;
+  animation: swipeBox 0.3s cubic-bezier(0, 0.85, 0.75, 1) 10.3s forwards;
 }
 
 .white-box,
@@ -381,7 +398,7 @@ body {
 
 @keyframes showCountryName {
   0% {
-    transform: translateY(15px);
+    transform: translateY(20px);
   }
   100% {
     transform: translateY(0);
@@ -425,9 +442,10 @@ body {
 
 @keyframes zoomImage {
   0% {
+    transform: translate3d(0%, 0%, 1px);
   }
   100% {
-    transform: scale(1.1);
+    transform: scale(1.2) translate3d(0%, 0%, 1px);
   }
 }
 
@@ -449,19 +467,19 @@ body {
 
 @keyframes zoomSecondImage {
   0% {
-    transform: translateX(-300px);
+    transform: translateX(-300px) translate3d(0%, 0%, 1px);
   }
   100% {
-    transform: translateX(-300px) scale(1.1);
+    transform: translateX(-300px) scale(1.2) translate3d(0%, 0%, 1px);
   }
 }
 
 @keyframes zoomThirdImage {
   0% {
-    transform: translateX(-600px);
+    transform: translateX(-600px) translate3d(0%, 0%, 1px);
   }
   100% {
-    transform: translateX(-600px) scale(1.1);
+    transform: translateX(-600px) scale(1.2) translate3d(0%, 0%, 1px);
   }
 }
 
@@ -505,7 +523,7 @@ body {
     transform: translateY(0);
   }
   100% {
-    transform: translateY(-15px);
+    transform: translateY(-20px);
   }
 }
 
